<resources>
    <string name="app_name">RecipeSV</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Recipe SV</string>
    <string name="nav_header_subtitle">github.com/gd19016/RecipeSV</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Títulos de acciones -->
    <string name="update">Modificar</string>
    <string name="delete">Borrar</string>
    <string name="add">Agregar</string>

    <!-- Nombres de módulos -->
    <string name="gestionar_recetas">Gestionar recetas</string>

    <!-- Etiquetas de campos -->
    <string name="id_receta">ID</string>
    <string name="nombre_receta">Nombre</string>
    <string name="descripcion_receta">Descripcion</string>
    <string name="pasos_receta">Pasos</string>
    <string name="tiempo_receta">Tiempo en minutos</string>

    <!-- Etiquetas de mantenimiento ingredientes -->
    <string name="gestionar_ingredientes">Gestionar ingredientes</string>
    <string name="id_ingrediente">ID</string>
    <string name="nombre_ingrediente">Nombre</string>
    <string name="ing_id_ingrediente">Ingrese el ID...</string>
    <string name="ing_nombre_ingrediente">Ingrese nombre ingrediente…</string>
    <string name="btn_guardar_ingrediente">Guardar Ingrediente</string>

    <!-- Tips a mostrar en campos -->
    <string name="ing_id_receta">Ingrese el ID...</string>
    <string name="ing_nombre_receta">Ingrese nombre de receta…</string>
    <string name="ing_descripcion_receta">Ingrese la descripcion</string>
    <string name="ing_pasos_receta">Ingrese los pasos...</string>
    <string name="ing_tiempo_receta">Ingrese los minutos de preparación ...</string>

    <!-- Titulos botones -->
    <string name="btn_guardar_receta">Guardar Receta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Cadenas Mantenimiento Colecciones -->
    <string name="gestionar_colecciones">Gestionar colecciones</string>
    <string name="id_coleccion">ID Coleccion</string>
    <string name="nombre_coleccion">Nombre</string>
    <string name="descripcion_coleccion">Descripcion</string>
    <string name="id_usuario">ID Usuario</string>
    <string name="ingresar_idColeccion">Ingresar ID Coleccion</string>
    <string name="ingresar_nombreColeccion">Ingresar nombre coleccion...</string>
    <string name="ingresar_descripcionColeccion">Ingresar descripcion</string>
    <string name="ingresar_idUserC">Ingresar ID Usuario</string>
    <string name="btn_guardar_coleccion">Guardar Coleccion</string>

    <string name="Elegir_dificultad">Elegir Dificultad:</string>
    <string name="Elegir_tipo">Elegir Tipo:</string>


    <string name="ingrese_id_usuario">Ingrese el ID</string>
    <string name="ingrese_email">Ingrese correo</string>
    <string name="ingrese_password">Ingrese contraseña</string>
    <string name="ingrese_nombre">Ingrese nombre</string>
    <string name="gestionar_inicio">Inicio</string>
    <string name="preview">Ver</string>
    <string name="favorito_hint">Favorito</string>
    <string name="iniciar_conteo_hint">Iniciar</string>
    <string name="channel_name">notif_recipesv</string>
    <string name="channel_description">Notificaciones de RecipeSV</string>
    <string name="detalle_receta">Detalle Receta</string>
    <string name="minutos_label">" minutos"</string>
    <string name="ing_tiempo_recordatorio">Ingrese el tiempo del paso para notificarle al finalizar...</string>
    <string name="dificultad">Dificultad:</string>
    <string name="coleccion">Colección:</string>
    <string name="filtros_label">Filtros para buscar recetas:</string>
    <string name="listado_recetas_label">Listado de recetas:</string>
    <string name="listado_comentarios_label">Listado de comentarios para la receta</string>
    <string name="btn_guardar_comentario">Agregar</string>
    <string name="comentario_label">Comentario:</string>
    <string name="comentarios_receta">Comentarios de Receta</string>
    <string name="listado_coleccion_label">Listado de colecciones que incluyen la receta</string>
    <string name="colecciones_receta">Colecciones de Receta</string>
    <string name="default_web_client_id">430794782737-eg0hpcp9l9iepfkkum7gk8u9mp40h158.apps.googleusercontent.com</string>

    <string name="Ver_PDF">Ver PDF</string>


</resources>