<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.colecciones.GuardarColeccionFragment"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/idColeccion_label"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/id_coleccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombreColeccion_label"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombre_coleccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idColeccion_label" />

    <TextView
        android:id="@+id/descripcionColeccion_label"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/descripcion_coleccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombreColeccion_label" />

    <TextView
        android:id="@+id/idUsuarioC_label"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/id_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcionColeccion_label" />


    <EditText
        android:id="@+id/idColeccion_input"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ingresar_idColeccion"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/idColeccion_label"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreColeccion_input"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ingresar_nombreColeccion"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/nombreColeccion_label"
        app:layout_constraintTop_toBottomOf="@id/idColeccion_input" />

    <EditText
        android:id="@+id/descripcionColeccion_input"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ingresar_descripcionColeccion"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/descripcionColeccion_label"
        app:layout_constraintTop_toBottomOf="@id/nombreColeccion_input" />

    <EditText
        android:id="@+id/idUserC_input"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ingresar_idUserC"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/idUsuarioC_label"
        app:layout_constraintTop_toBottomOf="@id/descripcionColeccion_input" />


    <Button
        android:id="@+id/guardar_coleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_guardar_coleccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idUsuarioC_label" />

</androidx.constraintlayout.widget.ConstraintLayout>