<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.receta.GuardarRecetaFragment"
    tools:ignore="ExtraText">
    <TextView
        android:id="@+id/id_label"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/id_receta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/nombre_label"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombre_receta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_label" />
    <TextView
        android:id="@+id/descripcion_label"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/descripcion_receta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombre_label" />
    <TextView
        android:id="@+id/pasos_label"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pasos_receta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcion_label" />
    <EditText
        android:id="@+id/id_receta_input"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ing_id_receta"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/id_label"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/nombre_input"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ing_nombre_receta"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/nombre_label"
        app:layout_constraintTop_toBottomOf="@id/id_receta_input" />
    <EditText
        android:id="@+id/descripcion_input"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ing_descripcion_receta"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:minLines="2"
        android:maxLines="3"
        app:layout_constraintStart_toEndOf="@+id/descripcion_label"
        app:layout_constraintTop_toBottomOf="@id/nombre_input" />

    <EditText
        android:id="@+id/pasos_input"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ing_pasos_receta"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:minLines="2"
        android:scrollbars="vertical"
        app:layout_constraintStart_toEndOf="@+id/pasos_label"
        app:layout_constraintTop_toBottomOf="@id/descripcion_input" />

    <TextView
        android:id="@+id/spinnerDificultad_label"
        android:layout_width="117dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Elegir_dificultad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pasos_label" />

    <Spinner
        android:id="@+id/spinnerDificultad"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDificultad_label" />

    <TextView
        android:id="@+id/spinnerTipo_label"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Elegir_tipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerDificultad"/>

    <Spinner
        android:id="@+id/spinnerTipo"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTipo_label" />

    <Button
        android:id="@+id/guardar_receta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_guardar_receta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTipo" />



</androidx.constraintlayout.widget.ConstraintLayout>
