<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="sv.edu.ues.fia.eisi.recipesv.ui.inicio.InicioFragment"
        android:label="@string/gestionar_inicio"
        tools:layout="@layout/fragment_inicio" >
        <action
            android:id="@+id/action_nav_inicio_to_nav_ver_receta"
            app:destination="@id/nav_ver_receta" />
    </fragment>

    <fragment
        android:id="@+id/nav_ver_receta"
        android:name="sv.edu.ues.fia.eisi.recipesv.ui.inicio.VerRecetaFragment"
        android:label="@string/detalle_receta"
        tools:layout="@layout/fragment_ver_receta">
        <action
            android:id="@+id/action_nav_inicio_to_nav_ver_comentarios"
            app:destination="@id/nav_ver_comentarios" />
        <action
            android:id="@+id/action_nav_inicio_to_nav_ver_colecciones"
            app:destination="@id/nav_ver_colecciones" />
    </fragment>

    <fragment
        android:id="@+id/nav_ver_colecciones"
        android:name="sv.edu.ues.fia.eisi.recipesv.ui.inicio.ColeccionFragment"
        android:label="@string/colecciones_receta"
        tools:layout="@layout/fragment_comentarios" />

    <fragment
        android:id="@+id/nav_ver_comentarios"
        android:name="sv.edu.ues.fia.eisi.recipesv.ui.inicio.ComentariosFragment"
        android:label="@string/comentarios_receta"
        tools:layout="@layout/fragment_comentarios" />

    <fragment
        android:id="@+id/nav_recetas"
        android:name="sv.edu.ues.fia.eisi.recipesv.ui.receta.RecetaFragment"
        android:label="@string/gestionar_recetas"
        tools:layout="@layout/receta_fragment" >
        <action
            android:id="@+id/action_nav_receta_to_nav_guardar_receta"
            app:destination="@id/nav_guardar_receta" />
    </fragment>

    <fragment
        android:id="@+id/nav_guardar_receta"
        android:name="sv.edu.ues.fia.eisi.recipesv.ui.receta.GuardarRecetaFragment"
        android:label="@string/gestionar_recetas"
        tools:layout="@layout/fragment_guardar_receta" />

    <fragment
        android:id="@+id/nav_colecciones"
        android:name="sv.edu.ues.fia.eisi.recipesv.ui.colecciones.ColeccionesFragment"
        android:label="@string/gestionar_colecciones"
        tools:layout="@layout/colecciones_fragment" >
        <action
            android:id="@+id/action_nav_coleccion_to_nav_guardar_coleccion"
            app:destination="@id/nav_guardar_coleccion" />
    </fragment>

    <fragment
        android:id="@+id/nav_guardar_coleccion"
        android:name="sv.edu.ues.fia.eisi.recipesv.ui.colecciones.GuardarColeccionFragment"
        android:label="@string/gestionar_colecciones"
        tools:layout="@layout/fragment_guardar_coleccion" />

    <fragment
        android:id="@+id/nav_usuarios"
        android:name="sv.edu.ues.fia.eisi.recipesv.ui.usuario.UsuarioFragment"
        android:label="Gestionar Usuarios"
        tools:layout="@layout/fragment_usuario" >
        <action
            android:id="@+id/action_nav_usuario_to_nav_guardar_usuario"
            app:destination="@id/nav_guardar_usuario" />
        <action
            android:id="@+id/action_nav_usuario_to_nav_pdfViewer"
            app:destination="@id/nav_pdfViewer" />
    </fragment>
    <fragment
        android:id="@+id/nav_guardar_usuario"
        android:name="sv.edu.ues.fia.eisi.recipesv.ui.usuario.GuardarUsuarioFragment"
        android:label="Gestionar Usuarios"
        tools:layout="@layout/fragment_guardar_usuario" />
    <fragment
        android:id="@+id/nav_pdfViewer"
        android:name="sv.edu.ues.fia.eisi.recipesv.ui.PDFViewerFragment"
        android:label="Visor PDF"
        tools:layout="@layout/fragment_p_d_f_viewer" />

    <fragment
        android:id="@+id/nav_ingredientes"
        android:name="sv.edu.ues.fia.eisi.recipesv.ui.ingrediente.IngredienteFragment"
        android:label="Gestionar Ingredientes"
        tools:layout="@layout/ingrediente_fragment" >
        <action
            android:id="@+id/action_nav_ingrediente_to_nav_guardar_ingrediente"
            app:destination="@id/nav_guardar_ingrediente" />
    </fragment>

    <fragment
        android:id="@+id/nav_guardar_ingrediente"
        android:name="sv.edu.ues.fia.eisi.recipesv.ui.ingrediente.GuardarIngredienteFragment"
        android:label="Gestionar Ingredientes"
        tools:layout="@layout/fragment_guardar_ingrediente" />

</navigation>